--- a/Wren.NET.csproj
+++ b/Wren.NET.csproj
@@ -32,6 +32,7 @@
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\" />
 		<None Include="LICENSE" Pack="true" PackagePath="\" />
+		<None Include="Wren LICENSE" Pack="true" PackagePath="\" />
 		<None Include="Wren.NET.Logo.png" Pack="true" PackagePath="\" />
 		<Content Include="runtimes/win-x64/native/*" Pack="true" PackagePath="runtimes/win-x64/native" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
