--- a/Wren.NET.csproj
+++ b/Wren.NET.csproj
@@ -7,7 +7,7 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<Nullable>enable</Nullable>
 		<PackageId>Wren.NET</PackageId>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<Authors>Cody Tilkins</Authors>
 		<Copyright>Copyright © Cody Tilkins 2025</Copyright>
 		<Title>Wren.NET</Title>
@@ -17,6 +17,7 @@
 		<PackageTags>Wren</PackageTags>
 		<Description>Wren.NET contains full bindings to Wren</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/tilkinsc/Wren.NET</RepositoryUrl>
