--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,10 +46,16 @@ jobs:
       run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
     - name: Pack with version
-      run: dotnet pack --configuration Release /p:Version=${{ steps.get_version.outputs.version }}
+      run: dotnet pack --configuration Release /p:Version=${{ steps.get_version.outputs.version }} --output ./nupkg
+
+    - name: Upload NuGet package as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: nuget-packages
+        path: ./nupkg/*.nupkg
 
     - name: Publish to NuGet
-      run: dotnet nuget push "**/bin/Release/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push "./nupkg/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
     - name: Create GitHub Release
       id: create_release
@@ -65,6 +71,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src/Wren.NET/bin/Release/*.nupkg
+        asset_path: ./nupkg/*.nupkg
         asset_name: Wren.NET.${{ steps.get_version.outputs.version }}.nupkg
         asset_content_type: application/octet-stream
