--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,15 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    
+    - name: Pack with version
+      run: dotnet pack --configuration Release --output ./nupkg
+
+    - name: Upload NuGet package as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: nuget-packages
+        path: ./nupkg/*.nupkg
 
   publish:
     if: startsWith(github.ref, 'refs/tags/v')
@@ -47,12 +56,6 @@ jobs:
 
     - name: Pack with version
       run: dotnet pack --configuration Release /p:Version=${{ steps.get_version.outputs.version }} --output ./nupkg
-
-    - name: Upload NuGet package as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: nuget-packages
-        path: ./nupkg/*.nupkg
 
     - name: Publish to NuGet
       run: dotnet nuget push "./nupkg/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
