--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     
     - name: Pack with version
-      run: dotnet pack --configuration Release --output ./nupkg
+      run: dotnet pack --configuration Debug --output ./nupkg
 
     - name: Upload NuGet package as artifact
       uses: actions/upload-artifact@v4
