--- a/Wren.NET.csproj
+++ b/Wren.NET.csproj
@@ -7,7 +7,7 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<Nullable>enable</Nullable>
 		<PackageId>Wren.NET</PackageId>
-		<Version>2.0.0</Version>
+		<Version>0.0.0</Version> <!-- Placeholder -->
 		<Authors>Cody Tilkins</Authors>
 		<Copyright>Copyright © Cody Tilkins 2025</Copyright>
 		<Title>Wren.NET</Title>
